# autonomousGasLeakDetectionRobot

./: .gitignore  README.md  pseudocode.pseudo  temp.launch  turtlebot3_office.launch
Archive/: environment.world  office.world  turtlebot3_environment.launch  turtlebot3_first_world.launch  turtlebot3_first_world.world  turtlebot3_office.launch
autonomous_navigation/: README.md
autonomous_navigation/src/: autonomous_navigation.cpp
catkin_ws/src/PseudoGasSensor/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/PseudoGasSensor/src/: PseudoGasSensor.cpp
catkin_ws/src/autonomous_navigation/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/autonomous_navigation/src/: autonomous_navigation.cpp
catkin_ws/src/ros_autonomous_slam/maps/: my_map.pgm
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_office.launch
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: turtlebot3_office.world
self_made/: CMakeLists.txt  README.md  package.xml
self_made/src/: turtlebot_navigation.cpp
